# codebrew2025

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.example  README.md  cmake_install.cmake  codebrew  convert.py  eslint.config.mjs  main  main.c  maxwell.mtl  package-lock.json  package.json  renderer
include/: fast_obj.c  fast_obj.h  tigr.c
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
src/: cube.h  hardcoded_geometry.h  lighting.c  lighting.h  main  main.c  mesh.c  mesh.h  pixel_grid.h  ray.c  ray.h  texture.c  texture.h  triangles.c  triangles.h  utils.h  vector.c  vector.h  vector_math.h
src/app/: env.ts
src/app/firebase/: index.ts
